--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 
 * {
   font-family: "Shadows Into Light", cursive;
+  color: #fff;
+}
+
+.body {
+  background-color: rgb(21, 24, 35);
 }
 
 .navbar {
@@ -9,7 +14,13 @@
   font-size: 30px;
   padding: 0 5rem;
   display: flex;
-  justify-content: center;
+  align-items: stretch;
+  align-content: stretch;
+  justify-content: space-between;
+}
+
+.navbar h2 {
+  margin-left: 450px;
 }
 
 .navbar span {
@@ -18,6 +29,16 @@
 
 .navbar_list {
   list-style: none;
+  text-align: right;
+}
+
+.navbar_list a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: rgb(255, 251, 0);
+  text-decoration: underline;
 }
 
 .container {
@@ -34,7 +55,17 @@ select {
   border-width: 1px;
 }
 
-.footer {
+.container_form select option {
+  color: black;
+}
+
+.container_form button {
+  color: black;
+}
+
+.footer a {
+  text-decoration: none;
+  font-size: 20px;
   display: flex;
-  justify-content: left;
+  justify-content: center;
 }
