--- a/style.css
+++ b/style.css
@@ -81,9 +81,25 @@ select {
   color: black;
 }
 
-.footer a {
-  text-decoration: none;
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
+.saiba_mais {
+  padding-top: 200px;
+  padding-left: 500px;
+  text-align: center;
+  width: 800px;
+  height: 200px;
+}
+
+.requisitos {
+  padding: 100px;
+  text-align: center;
+  width: 800px;
+  height: 200px;
+}
+
+.investimento {
+  padding-top: 50px;
+  padding-left: 500px;
+  text-align: center;
+  width: 800px;
+  height: 200px;
 }
